--- a/pom.xml
+++ b/pom.xml
@@ -115,13 +115,25 @@
                 <version>0.0.5</version>
                 <executions>
                     <execution>
+                        <id>a</id>
                         <goals>
                             <goal>addTestsFromRepo</goal>
                         </goals>
                         <configuration>
                             <repoGitUri>https://github.com/apache/commons-io</repoGitUri>
-                            <relativeDirectory>/src/test</relativeDirectory>
-                            <outputDirectory>${project.build.directory}/generated-test-sources/src/test</outputDirectory>
+                            <relativeDirectory>/src/test/java</relativeDirectory>
+                            <outputDirectory>${project.build.directory}/generated-test-sources/java</outputDirectory>
+                        </configuration>
+                    </execution>
+                    <execution>
+                        <id>b</id>
+                        <goals>
+                            <goal>addFromRepo</goal>
+                        </goals>
+                        <configuration>
+                            <repoGitUri>https://github.com/apache/commons-io</repoGitUri>
+                            <relativeDirectory>/src/test/resources</relativeDirectory>
+                            <outputDirectory>${project.build.directory}/src/test/resources</outputDirectory>
                         </configuration>
                     </execution>
                 </executions>
